--- a/app/views/welcome/anglais.html.erb
+++ b/app/views/welcome/anglais.html.erb
@@ -329,7 +329,7 @@ Header
               <h4><a href="#">Ecommerce 1</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../01.png" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../01.png" data-lightbox="portfolio" data-title="" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -343,7 +343,7 @@ Header
               <h4><a href="#">STARTUP 1</a></h4>
               <p>STARTUP</p>
               <div>
-                <a href="../a1.png" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../a1.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -357,7 +357,7 @@ Header
               <h4><a href="#">Ecommerce 2</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../02.png" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../02.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -371,7 +371,7 @@ Header
               <h4><a href="#">SIG 1</a></h4>
               <p>SIG</p>
               <div>
-                <a href="../a.png" class="link-preview" data-lightbox="portfolio" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../a.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -385,7 +385,7 @@ Header
               <h4><a href="#">SIG 2</a></h4>
               <p>SIG</p>
               <div>
-                <a href="../b.png" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../b.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -399,7 +399,7 @@ Header
               <h4><a href="#">Ecommerce 3</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../03.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../03.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -413,7 +413,7 @@ Header
               <h4><a href="#">Ecommerce 4</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../04.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../04.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -427,7 +427,7 @@ Header
               <h4><a href="#">Ecommerce 5</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../05.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../05.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -441,7 +441,7 @@ Header
               <h4><a href="#">Ecommerce 6</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../06.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../06.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -455,7 +455,7 @@ Header
               <h4><a href="#">Ecommerce 7</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../07.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../07.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -469,7 +469,7 @@ Header
               <h4><a href="#">Ecommerce 8</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../08.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../08.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -483,7 +483,7 @@ Header
               <h4><a href="#">Ecommerce 9</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../09.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../09.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -497,7 +497,7 @@ Header
               <h4><a href="#">Ecommerce 10</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../010.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../010.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -511,7 +511,7 @@ Header
               <h4><a href="#">Ecommerce 11</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../011.png" class="link-preview" data-lightbox="portfolio" data-title="App 011" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../011.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -525,7 +525,7 @@ Header
               <h4><a href="#">SIG 3</a></h4>
               <p>SIG</p>
               <div>
-                <a href="../c.png" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../c.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -539,7 +539,7 @@ Header
               <h4><a href="#">SIG 4</a></h4>
               <p>SIG</p>
               <div>
-                <a href="../d.png" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../d.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -553,7 +553,7 @@ Header
               <h4><a href="#">SIG 5</a></h4>
               <p>SIG</p>
               <div>
-                <a href="../e.png" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../e.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -567,7 +567,7 @@ Header
               <h4><a href="#">SIG 6</a></h4>
               <p>SIG</p>
               <div>
-                <a href="../f.png" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../f.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -581,7 +581,7 @@ Header
               <h4><a href="#">STARTUP 2</a></h4>
               <p>STARTUP</p>
               <div>
-                <a href="../a2.png" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../a2.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -595,7 +595,7 @@ Header
               <h4><a href="#">STARTUP 3</a></h4>
               <p>STARTUP</p>
               <div>
-                <a href="../a3.png" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../a3.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -609,7 +609,7 @@ Header
               <h4><a href="#">STARTUP 4</a></h4>
               <p>STARTUP</p>
               <div>
-                <a href="../a4.png" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../a4.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -623,7 +623,7 @@ Header
               <h4><a href="#">STARTUP 5</a></h4>
               <p>STARTUP</p>
               <div>
-                <a href="../a5.png" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../a5.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -637,7 +637,7 @@ Header
               <h4><a href="#">STARTUP 6</a></h4>
               <p>STARTUP</p>
               <div>
-                <a href="../a6.png" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../a6.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
