--- a/app/views/welcome/francais.html.erb
+++ b/app/views/welcome/francais.html.erb
@@ -346,7 +346,7 @@ Header
               <h4><a href="#">STARTUP 1</a></h4>
               <p>STARTUP</p>
               <div>
-                <a href="../a1.png" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../a1.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -360,7 +360,7 @@ Header
               <h4><a href="#">Ecommerce 2</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../02.png" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../02.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -374,7 +374,7 @@ Header
               <h4><a href="#">SIG 1</a></h4>
               <p>SIG</p>
               <div>
-                <a href="../a.png" class="link-preview" data-lightbox="portfolio" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../a.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -388,7 +388,7 @@ Header
               <h4><a href="#">SIG 2</a></h4>
               <p>SIG</p>
               <div>
-                <a href="../b.png" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../b.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -402,7 +402,7 @@ Header
               <h4><a href="#">Ecommerce 3</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../03.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../03.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -416,7 +416,7 @@ Header
               <h4><a href="#">Ecommerce 4</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../04.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../04.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -430,7 +430,7 @@ Header
               <h4><a href="#">Ecommerce 5</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../05.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../05.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -444,7 +444,7 @@ Header
               <h4><a href="#">Ecommerce 6</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../06.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../06.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -458,7 +458,7 @@ Header
               <h4><a href="#">Ecommerce 7</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../07.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../07.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -472,7 +472,7 @@ Header
               <h4><a href="#">Ecommerce 8</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../08.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../08.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -486,7 +486,7 @@ Header
               <h4><a href="#">Ecommerce 9</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../09.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../09.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -500,7 +500,7 @@ Header
               <h4><a href="#">Ecommerce 10</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../010.png" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../010.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -514,7 +514,7 @@ Header
               <h4><a href="#">Ecommerce 11</a></h4>
               <p>Ecommerce</p>
               <div>
-                <a href="../011.png" class="link-preview" data-lightbox="portfolio" data-title="App 011" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../011.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -528,7 +528,7 @@ Header
               <h4><a href="#">SIG 3</a></h4>
               <p>SIG</p>
               <div>
-                <a href="../c.png" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../c.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -542,7 +542,7 @@ Header
               <h4><a href="#">SIG 4</a></h4>
               <p>SIG</p>
               <div>
-                <a href="../d.png" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../d.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -556,7 +556,7 @@ Header
               <h4><a href="#">SIG 5</a></h4>
               <p>SIG</p>
               <div>
-                <a href="../e.png" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../e.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -570,7 +570,7 @@ Header
               <h4><a href="#">SIG 6</a></h4>
               <p>SIG</p>
               <div>
-                <a href="../f.png" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../f.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -584,7 +584,7 @@ Header
               <h4><a href="#">STARTUP 2</a></h4>
               <p>STARTUP</p>
               <div>
-                <a href="../a2.png" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../a2.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -598,7 +598,7 @@ Header
               <h4><a href="#">STARTUP 3</a></h4>
               <p>STARTUP</p>
               <div>
-                <a href="../a3.png" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../a3.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -612,7 +612,7 @@ Header
               <h4><a href="#">STARTUP 4</a></h4>
               <p>STARTUP</p>
               <div>
-                <a href="../a4.png" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../a4.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -626,7 +626,7 @@ Header
               <h4><a href="#">STARTUP 5</a></h4>
               <p>STARTUP</p>
               <div>
-                <a href="../a5.png" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../a5.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
@@ -640,7 +640,7 @@ Header
               <h4><a href="#">STARTUP 6</a></h4>
               <p>STARTUP</p>
               <div>
-                <a href="../a6.png" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a href="../a6.png" class="link-preview" data-lightbox="portfolio" data-title="" title="Preview"><i class="ion ion-eye"></i></a>
                 <!--<a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>-->
               </div>
             </div>
