fix contact info

--- a/app/views/welcome/francais.html.erb
+++ b/app/views/welcome/francais.html.erb
@@ -945,18 +945,18 @@ Header
             </div>
             <div class="col-md-4 info">
               <i class="ion-ios-email-outline"></i>
-              <p>khaledsetif1900@gmail.com</p>
+              <p>contact@elitesoftwear.com</p>
             </div>
             <div class="col-md-3 info">
               <i class="ion-ios-telephone-outline"></i>
-              <p>+213 662 24 44 35</p>
+              <p>+213 552 56 96 54</p>
             </div>
           </div>
 
           <div class="form">
             <div id="sendmessage">Votre message a été envoyé. Je vous remercie!</div>
             <div id="errormessage"></div>
-            <form action="https://formspree.io/xpzylrpo" method="post" role="form" class="contactForm">
+            <form action="https://formspree.io/xknqewla" method="post" role="form" class="contactForm">
               <div class="form-row">
                 <div class="form-group col-lg-6">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Votre nom" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
