update technologies section and services

--- a/app/views/welcome/anglais.html.erb
+++ b/app/views/welcome/anglais.html.erb
@@ -177,46 +177,46 @@ Header
 
         <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-duration="1.4s">
           <div class="box">
-            <div class="icon"><i class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
+            <div class="icon"><i class="ion-social-nodejs" style="color: #41cf2e;"></i></div>
             <h4 class="title"><a href="">Web Application Development</a></h4>
             <p class="description">Web application development is the creation of application programs that reside on remote servers and are delivered to the user's device over the Internet</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
           <div class="box">
-            <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #e9bf06;"></i></div>
-            <h4 class="title"><a href="">Custom Website Development</a></h4>
-            <p class="description">Our web development team loves to be challenged and has vast experience building customized solutions and plugins to meet client needs</p>
+            <div class="icon"><i class="ion-social-android-outline" style="color: #3fcdc7;"></i></div>
+            <h4 class="title"><a href="">Mobile Application Development</a></h4>
+            <p class="description">Our mobile development team loves to be challenged and has vast experience building customized solutions for our customers with Scalable Technology.</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
           <div class="box">
-            <div class="icon"><i class="ion-ios-paper-outline" style="color: #3fcdc7;"></i></div>
-            <h4 class="title"><a href="">Business Website Development</a></h4>
-            <p class="description">Build a website for your company so you can boost your Business by choosing a template that feet your needs</p>
+            <div class="icon"><i class="ion-social-python" style="color: #4680ff;"></i></div>
+            <h4 class="title"><a href="">ERP Development</a></h4>
+            <p class="description">ERP software handles the management of main business processes in real-time. ERP applications collect, store, manage and interpret information from various business activities.</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
           <div class="box">
             <div class="icon"><i class="ion-ios-speedometer-outline" style="color:#41cf2e;"></i></div>
             <h4 class="title"><a href="">UI/UX Design</a></h4>
-            <p class="description">Improvement of the interface by anticipate what users might need to do and ensures that elements are easy to access</p>
+            <p class="description">The goal of user interface design is to make the user's interaction with the application as simple and efficient as possible, in terms of accomplishing user expectations.</p>
           </div>
         </div>
 
         <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
           <div class="box">
-            <div class="icon"><i class="ion-ios-world-outline" style="color: #d6ff22;"></i></div>
+            <div class="icon"><i class="ion-social-tux" style="color: #fcba03;"></i></div>
             <h4 class="title"><a href="">Maintenance & Support</a></h4>
-            <p class="description">For better management of information and communications technology equipment for software</p>
+            <p class="description">The customer service offer a variety of maintenance modalities to our clients and also continuous evolution of our products during the after-sales phase of the projects.</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
           <div class="box">
-            <div class="icon"><i class="ion-ios-clock-outline" style="color: #4680ff;"></i></div>
+            <div class="icon"><i class="ion-ios-cart-outline" style="color: #fc0303;"></i></div>
             <h4 class="title"><a href="">Ecommerce Development</a></h4>
-            <p class="description">Our dedicated ecommerce web developers experts can ensure that your site performs,have ecommerce features, offering scalability and integration solutions</p>
+            <p class="description">Our dedicated ecommerce developers experts can ensure that your site performs,have ecommerce features, offering scalability and integration solutions</p>
           </div>
         </div>
 
@@ -818,69 +818,57 @@ Header
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/16.png"), class: "img-fluid"%>
+            <%= image_tag ("img/Ruby_on_Rails.svg"), class: "img-fluid"%>
+          </div>
+        </div>
+
+        
+
+        <div class="col-lg-3 col-md-4 col-xs-6">
+          <div class="client-logo">
+            <%= image_tag ("img/wordpress-logo-vector-01.png"), class: "img-fluid"%>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/1.png"), class: "img-fluid"%>
+            <%= image_tag ("img/4.jpg"), class: "img-fluid"%>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/3.png"), class: "img-fluid"%>
+            <%= image_tag ("img/Vue.svg"), class: "img-fluid"%>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/ap.png"), class: "img-fluid"%>
+            <%= image_tag ("img/PostgreSQL.svg"), class: "img-fluid"%>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/5.png"), class: "img-fluid"%>
+            <%= image_tag ("img/React.svg"), class: "img-fluid"%>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/9.png"), class: "img-fluid"%>
+            <%= image_tag ("img/Nginx.svg"), class: "img-fluid"%>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/12.png"), class: "img-fluid"%>
+            <%= image_tag ("img/Node.svg"), class: "img-fluid"%>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <div class="client-logo">
-            <%= image_tag ("img/13.png"), class: "img-fluid"%>
-          </div>
-        </div>
+       
 
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <div class="client-logo">
-            <%= image_tag ("img/8.png"), class: "img-fluid"%>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <div class="client-logo">
-            <%= image_tag ("img/17.png"), class: "img-fluid"%>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <div class="client-logo">
-            <%= image_tag ("img/7.webp"), class: "img-fluid"%>
-          </div>
-        </div>
+        
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
@@ -894,21 +882,17 @@ Header
           </div>
         </div>
 
+        
+
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/51.png"), class: "img-fluid"%>
+            <%= image_tag ("img/Python.svg"), class: "img-fluid"%>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4 col-xs-6">
           <div class="client-logo">
-            <%= image_tag ("img/62.jpg"), class: "img-fluid"%>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-4 col-xs-6">
-          <div class="client-logo">
-            <%= image_tag ("img/42.png"), class: "img-fluid"%>
+            <%= image_tag ("img/Odoo.svg"), class: "img-fluid"%>
           </div>
         </div>
       </div>
@@ -942,11 +926,11 @@ Header
             </div>
             <div class="col-md-4 info">
               <i class="ion-ios-email-outline"></i>
-              <p>khaledsetif1900@gmail.com</p>
+              <p>contact@nextchallenge-dz.com</p>
             </div>
             <div class="col-md-3 info">
               <i class="ion-ios-telephone-outline"></i>
-              <p>+213 662 24 44 35</p>
+              <p>+213 552 56 96 54</p>
             </div>
           </div>
 
@@ -1042,7 +1026,7 @@ Header
 
   <div class="container">
     <div class="copyright">
-      &copy; Copyright <strong>Elite Soft</strong>. All Rights Reserved
+      &copy; Copyright <strong>Next Challenge</strong>. All Rights Reserved
     </div>
     <div class="credits">
       <!--
